@@ -1,18 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<form>
-	<fieldset>
-		<field name="title" type="text"
-			class="inputbox"
-			description="CONTENT_PAGEBREAK_TITLE_DESC"			
-			label="CONTENT_PAGEBREAK_TITLE_LABEL"
-			size="20"
-		 />
-
-		<field name="alt" type="text"
-			class="inputbox"
-			description="CONTENT_PAGEBREAK_ALIAS_DESC"			
-			label="CONTENT_PAGEBREAK_ALIAS_LABEL"
-			size="20"
-		 />			
-	</fieldset>		
-</form>
